--------------------------------------------------------------------------------
Changes for 1.9.6

New features:
 - [ZBX-1357] updated German, Latvian, Polish, Russian, Turkish and Ukrainian translations; thanks to Zabbix translators (Richlv)

Bug fixes:

--------------------------------------------------------------------------------
Changes for 1.9.5

New features:
 - [ZBXNEXT-831] macros in interface IP addresses and DNS names are resolved in cache (rudolfs)
 - [ZBXNEXT-841] added "config" table to configuration cache, refresh_unsupported now is read from cache and synced with proxies (rudolfs)
 - [ZBXNEXT-807] implemented configuration cache for triggers (asaveljevs)
 - [ZBXNEXT-674] added host area functionality for maps (Aly, Vedmak)
 - [ZBXNEXT-738] added configurable colors and blinking for alarm states OK/PROBLEM (KB)
 - [ZBXNEXT-827] move misc/conf to the top level source directory (Richlv)
 - [ZBXNEXT-746] added trigger sorting by severity and host name (KB)
 - [ZBX-1357] updated Latvian, Russian and Ukrainian translations; thanks to Zabbix translators (Richlv)
 - [ZBXNEXT-783] added Inventory -> Overview report and filter to Inventory -> Hosts (KB)
 - [ZBXNEXT-467] renamed net.tcp.dns(.query)[] to net.dns(.record)[], added Windows support, retrans and timeout parameters and IP parameter support for UNIX (rudolfs)
 - [ZBX-3828] added Turkish translation; thanks to Murat Koç (Richlv)
 - [ZBXNEXT-677] added system.hw.* and system.sw.* items for Linux (rudolfs)
 - [ZBXNEXT-780] all items (including user parameters and external checks) can also return only whitespace (rudolfs)

Bug fixes:
 - [ZBX-3962] fixed memory leak in poller processes (Sasha)
 - [ZBX-3901] fixed make errors due to "cp -n" under RHEL with --enable-java option (Sasha)
 - [ZBXNEXT-828] remove outdated spec files (Richlv)
 - [ZBX-3841] returned functionality of a macro {HOSTNAME} as in the version 1.8.x (Sasha)
 - [ZBX-3841] fixed processing of {HOST.NAME} macro in item keys (Sasha)